ch10/ch10-start/config-macro-usage/tests/fails/unknown_config_keyword.stderr
error: config macro only allows for 'path' input
 --> tests/fails/unknown_config_keyword.rs:3:9
  |
3 | config!(unknown = stuff);
  |         ^^^^^^^
